// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`create_root instruction Works for community side 1`] = `
TransactionInstruction {
  "data": {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(9Qb3kQxUv3eJSosCXXFZEBZobW43H7XttJVBNdpXaGyt) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            58883303,
            63039634,
            59886872,
            36530289,
            30024150,
            21500111,
            48838891,
            30420063,
            33388326,
            2046486,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(BvQys4bSSzv8HnTUse17x6sm67qbQ5u7xj2BiCkQZc4d) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            58079054,
            36569257,
            7101222,
            54828669,
            59166928,
            57562788,
            29347375,
            18485335,
            5338649,
            2658545,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(ETSoAX2JebkucZHW5Vg8JRBRoqptp8vTUMjw3G9fKYSg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            57943581,
            44141542,
            15457336,
            36665374,
            19136760,
            45881863,
            28275435,
            62208564,
            47814291,
            3275660,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(7dz49JkGFr9ywHJJyT7xJkWFJv1HSw6a1oKQMRsjTuci) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            46896215,
            20183853,
            55025,
            7492377,
            34198466,
            59422852,
            6103045,
            34166487,
            46457569,
            1615842,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(ALkNx6FUt5DeTXEgmsMtpF6HjBu5v9YA5tHHU1oFB8Mx) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            15574891,
            29149812,
            45742115,
            51727471,
            45423278,
            56388931,
            42793431,
            16305363,
            1070484,
            2273809,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(3z4a1iP71ZNyDuwNXnQBRUzDfUVedpT7b12wcun3zbrB) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            42170516,
            65132590,
            19394089,
            40920241,
            29209184,
            8544378,
            28564892,
            61833350,
            115823,
            726369,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(GovErnqK4XvMPN1Njxh1zTQpzzzPZUaJQGjHM9qHjMHr) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            37302321,
            26661558,
            32514984,
            48073858,
            4758616,
            64087088,
            63568600,
            23015560,
            66347731,
            3848461,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24200809,
            52762679,
            39805554,
            1157911,
            29958298,
            50898047,
            45850277,
            66191998,
            52770119,
            51260,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(7dz49JkGFr9ywHJJyT7xJkWFJv1HSw6a1oKQMRsjTuci) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            46896215,
            20183853,
            55025,
            7492377,
            34198466,
            59422852,
            6103045,
            34166487,
            46457569,
            1615842,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(GpyUDSedghGbuhPv64EuC2ueCPWwqYAiZ3e6UUVRqDZi) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            23242457,
            9178051,
            10826570,
            10016321,
            18408687,
            56723121,
            20219250,
            26245687,
            61709082,
            3852892,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        24200809,
        52762679,
        39805554,
        1157911,
        29958298,
        50898047,
        45850277,
        66191998,
        52770119,
        51260,
        0,
      ],
    },
  },
}
`;

exports[`create_root instruction Works for community side 2`] = `
TransactionInstruction {
  "data": {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(BYUrHdoWt8vu29GkxzBCpcP2WPKTwUdWXHnLH4pLBJyC) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            12378623,
            16485076,
            61010369,
            53643691,
            51085923,
            47984702,
            35273071,
            13171655,
            20649983,
            2566487,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(HaP8jMNA5tyyZo4WUybWzw2JDm26ks1tM8hzdtFgQ9j4) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            44467759,
            6361579,
            6086648,
            66384142,
            49392678,
            14448973,
            56399817,
            31816424,
            50786497,
            4035083,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(7xi6tNMR7mjVUoT96BAC5RRgGGtsV7ot5PtE5ogCu1yS) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            7513209,
            46732664,
            66142550,
            34809689,
            23867398,
            39921380,
            4029952,
            58455163,
            36057456,
            1694434,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(FFoZHtEnVAcqWRrWSJuSwaNhDD233ji8AUsUGdTMqf7n) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            14828897,
            50565887,
            22693448,
            34006707,
            86845,
            61200733,
            65407039,
            12837600,
            65167986,
            3470232,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(FRBUNsdJmHmuZ3STCHENKNozW1mUot5kQmvcNg4yaMDd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            57774708,
            8462039,
            25856231,
            4215079,
            14676022,
            35787589,
            5053974,
            5237723,
            27967471,
            3509593,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(Fg52esnwLSWyTcQmsu8Qvtd7CBGV7aBJAP2Kif1JNdqm) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            53788532,
            6986002,
            63994044,
            31592696,
            13393677,
            1531077,
            55038489,
            42509969,
            47514841,
            3572084,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(govrnqX1Kx5j1Y3Y3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24804138,
            14041733,
            10942277,
            21608356,
            29741479,
            66927727,
            65079254,
            24170420,
            46211060,
            167085,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24200809,
            52762679,
            39805554,
            1157911,
            29958298,
            50898047,
            45850277,
            66191998,
            52770119,
            51260,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(FFoZHtEnVAcqWRrWSJuSwaNhDD233ji8AUsUGdTMqf7n) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            14828897,
            50565887,
            22693448,
            34006707,
            86845,
            61200733,
            65407039,
            12837600,
            65167986,
            3470232,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(64gc9d1NYHykumPix4kNHB3gErQu7Z6jC5Qh6jKFyh2b) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            35701724,
            9571093,
            40943339,
            20732688,
            10267630,
            29390827,
            44282723,
            57060028,
            28318117,
            1232637,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(CSzMGQjWBtM6tfFGnAe4jSn62qDZjL94uHDvMXNAFka6) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            43028715,
            47407546,
            32765246,
            37508434,
            5970287,
            17510679,
            3328376,
            50520788,
            65924888,
            2786874,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(CAtStpbXBSmrd3oBwS7ePgMZJ7KK79UVpmM87aGnzpgc) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            16955885,
            19082314,
            11331137,
            50735069,
            36093876,
            20899558,
            12463349,
            64913396,
            4383083,
            2719293,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        24200809,
        52762679,
        39805554,
        1157911,
        29958298,
        50898047,
        45850277,
        66191998,
        52770119,
        51260,
        0,
      ],
    },
  },
}
`;

exports[`create_root instruction Works for community side 3`] = `
TransactionInstruction {
  "data": {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(CM3XVYZRMShqxL8KhL9WCsTpuUMbkh3T5B4oAVvJ49cW) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            42395987,
            43274895,
            37847349,
            53853838,
            37347087,
            29502343,
            6773352,
            8415829,
            54092938,
            2761921,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            35968823,
            62692685,
            42784362,
            11707079,
            65751252,
            21423752,
            9869718,
            13196438,
            24634549,
            2600696,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            9277242,
            28959418,
            32057797,
            34745044,
            27390759,
            26194363,
            29720350,
            14681089,
            21979440,
            2433780,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(2XjVUAVYD6fUnUBoJqLNbQjufdQft4PtxcQwLMkuQrpM) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            44299734,
            38343229,
            23051204,
            49114011,
            32774323,
            49856921,
            6895135,
            13511076,
            64906106,
            372425,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            31176927,
            27447869,
            806694,
            17423363,
            22215601,
            33293735,
            58053801,
            16380447,
            43189841,
            3703731,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(GjfEcmmGaA6bjKZiqCXqqEnv1FN1LgrZHvqHv1FUN1s) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            42951294,
            52349239,
            34849852,
            32785371,
            612374,
            34432589,
            37079630,
            25331562,
            41103618,
            66044,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            35863069,
            49982478,
            8038179,
            61447638,
            8656205,
            20826582,
            24775445,
            6791654,
            49045110,
            3858942,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24200809,
            52762679,
            39805554,
            1157911,
            29958298,
            50898047,
            45850277,
            66191998,
            52770119,
            51260,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(2XjVUAVYD6fUnUBoJqLNbQjufdQft4PtxcQwLMkuQrpM) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            44299734,
            38343229,
            23051204,
            49114011,
            32774323,
            49856921,
            6895135,
            13511076,
            64906106,
            372425,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(4ebDpxv7A6AxsvHBzmYJJdqGdkgbDwqsmmVjwJLNY1LE) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            5861283,
            15558353,
            6160751,
            7557912,
            39602863,
            46607335,
            16810392,
            25619630,
            44335634,
            888079,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33254205,
            32833114,
            9241971,
            60905829,
            10848249,
            10477893,
            53837508,
            22720196,
            32622652,
            263046,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(2cQL9ecbT5hRw7eVNa7wzmv1C76yebmARSYcivGACD3i) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            61370037,
            23360809,
            37982338,
            26402356,
            13207690,
            34204939,
            59306126,
            57278815,
            17659703,
            392025,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        24200809,
        52762679,
        39805554,
        1157911,
        29958298,
        50898047,
        45850277,
        66191998,
        52770119,
        51260,
        0,
      ],
    },
  },
}
`;

exports[`create_root instruction Works for community side 4`] = `
TransactionInstruction {
  "data": {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(E6gRU7cp4XfdwUqVq2DFfmAUdjtbKZcqF23hpSTcn9z6) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            17392711,
            52338499,
            4519989,
            60859994,
            28820546,
            49127477,
            36672536,
            7257560,
            9747218,
            3188506,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            3412198,
            39489918,
            33372618,
            21280913,
            13471501,
            33757489,
            58322942,
            21229611,
            57446009,
            2086307,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            66103883,
            58564744,
            58104881,
            16718627,
            23599981,
            32065805,
            63871906,
            65544858,
            27834944,
            3973078,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(B4wVHPFEBvhsMxsrEYX2cVbTfcfQiLZMh7XbofeDofhd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33514268,
            38576428,
            28820499,
            60174870,
            15120390,
            46231706,
            61127514,
            28593253,
            9874701,
            2450894,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            51167393,
            17488651,
            46887655,
            57329362,
            45625970,
            12372949,
            26239502,
            2086456,
            8555017,
            4192470,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(EpSBUYR2srojq9wH1mLADY3EXuyGU3JyToteia2cFeFa) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            25816641,
            16430264,
            9840882,
            51091790,
            60630359,
            27781633,
            56286149,
            5121274,
            53108911,
            3363756,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33071046,
            4457739,
            39800208,
            38504790,
            2436520,
            6627580,
            2798464,
            17517814,
            34450164,
            2686346,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24200809,
            52762679,
            39805554,
            1157911,
            29958298,
            50898047,
            45850277,
            66191998,
            52770119,
            51260,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(B4wVHPFEBvhsMxsrEYX2cVbTfcfQiLZMh7XbofeDofhd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33514268,
            38576428,
            28820499,
            60174870,
            15120390,
            46231706,
            61127514,
            28593253,
            9874701,
            2450894,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(55KAtKEGQX8b83HRmALDZsuP1MojBrR438CiWJAaNmfX) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            53092258,
            40116904,
            29327029,
            32040724,
            60620446,
            28201726,
            22219434,
            46404823,
            29778292,
            991847,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            5726246,
            30941938,
            55437424,
            61562626,
            52094472,
            23968365,
            28287650,
            9205732,
            32797589,
            3364566,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(GYZp21Xcp7QsxzFCaBLjmaE6UNV239QvZPEPniCvhDJ6) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            26067647,
            2592511,
            31809026,
            36166292,
            50528115,
            52820729,
            16385857,
            56389297,
            7906859,
            3784026,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(Cgkum2oTs87Vhtu87Y8UznPB5tvNSdBweEGQsxYhzeLN) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            45712415,
            60399628,
            2976120,
            37274815,
            5237713,
            34622005,
            13694300,
            28254569,
            54901438,
            2844662,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(3cWyirr8k5NK1ZX8A4ZUpsg1TpHnf2HXvJyBH6BWodHF) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            29765694,
            21564382,
            61417283,
            55300473,
            34010396,
            55715124,
            804974,
            52882299,
            19793081,
            635942,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(AiurCiekwEz3i8gVapCdRWs9fb4ry45RHCD691AUp5sd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            6278576,
            3558105,
            44363026,
            31848854,
            35589267,
            60929090,
            26008988,
            50705981,
            5518913,
            2366832,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(AEjwvocgFfu2hpGZpY2qGaEzoCQrGYnf7TGSviEZB9Fn) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            67055849,
            9483813,
            65988286,
            60282799,
            36542326,
            26360063,
            51109538,
            46952379,
            51389409,
            2248594,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        24200809,
        52762679,
        39805554,
        1157911,
        29958298,
        50898047,
        45850277,
        66191998,
        52770119,
        51260,
        0,
      ],
    },
  },
}
`;

exports[`create_root instruction Works for council side 1`] = `
TransactionInstruction {
  "data": {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(GrgWguS5U7tJ2oTuF19uRrWrGEuXMYjL5gWFVbxeic3U) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            5671955,
            8804376,
            64575751,
            44760097,
            17228103,
            52239014,
            56502332,
            3891856,
            9641498,
            3860060,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            35968823,
            62692685,
            42784362,
            11707079,
            65751252,
            21423752,
            9869718,
            13196438,
            24634549,
            2600696,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            9277242,
            28959418,
            32057797,
            34745044,
            27390759,
            26194363,
            29720350,
            14681089,
            21979440,
            2433780,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33254205,
            32833114,
            9241971,
            60905829,
            10848249,
            10477893,
            53837508,
            22720196,
            32622652,
            263046,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            31176927,
            27447869,
            806694,
            17423363,
            22215601,
            33293735,
            58053801,
            16380447,
            43189841,
            3703731,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(62icsVwg783VTrJUFPDTukqezt5PqrduTDW3ecVYWKNf) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            58772904,
            35771404,
            3940162,
            21936919,
            2372404,
            59402268,
            13790470,
            39196904,
            47603006,
            1224388,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            35863069,
            49982478,
            8038179,
            61447638,
            8656205,
            20826582,
            24775445,
            6791654,
            49045110,
            3858942,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24200809,
            52762679,
            39805554,
            1157911,
            29958298,
            50898047,
            45850277,
            66191998,
            52770119,
            51260,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(2XjVUAVYD6fUnUBoJqLNbQjufdQft4PtxcQwLMkuQrpM) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            44299734,
            38343229,
            23051204,
            49114011,
            32774323,
            49856921,
            6895135,
            13511076,
            64906106,
            372425,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(4ebDpxv7A6AxsvHBzmYJJdqGdkgbDwqsmmVjwJLNY1LE) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            5861283,
            15558353,
            6160751,
            7557912,
            39602863,
            46607335,
            16810392,
            25619630,
            44335634,
            888079,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33254205,
            32833114,
            9241971,
            60905829,
            10848249,
            10477893,
            53837508,
            22720196,
            32622652,
            263046,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(2cQL9ecbT5hRw7eVNa7wzmv1C76yebmARSYcivGACD3i) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            61370037,
            23360809,
            37982338,
            26402356,
            13207690,
            34204939,
            59306126,
            57278815,
            17659703,
            392025,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        24200809,
        52762679,
        39805554,
        1157911,
        29958298,
        50898047,
        45850277,
        66191998,
        52770119,
        51260,
        0,
      ],
    },
  },
}
`;

exports[`create_root instruction Works for council side 2`] = `
TransactionInstruction {
  "data": {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(6SnXaQKXKXWHho4uDEyrt7sjXXHnmPreBXPLjvUs1n4G) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            25382993,
            54881849,
            26100161,
            41283960,
            14460426,
            34404288,
            12579092,
            51312623,
            46040342,
            1325403,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            3412198,
            39489918,
            33372618,
            21280913,
            13471501,
            33757489,
            58322942,
            21229611,
            57446009,
            2086307,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            66103883,
            58564744,
            58104881,
            16718627,
            23599981,
            32065805,
            63871906,
            65544858,
            27834944,
            3973078,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            5726246,
            30941938,
            55437424,
            61562626,
            52094472,
            23968365,
            28287650,
            9205732,
            32797589,
            3364566,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            51167393,
            17488651,
            46887655,
            57329362,
            45625970,
            12372949,
            26239502,
            2086456,
            8555017,
            4192470,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(AVXwfrFgZUkv9tPzQxXLsPPE3QVMeHTrzQVbAR41QKBP) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            42716122,
            16724036,
            44808137,
            41792553,
            40433531,
            43601583,
            65228965,
            50133229,
            42977177,
            2310683,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33071046,
            4457739,
            39800208,
            38504790,
            2436520,
            6627580,
            2798464,
            17517814,
            34450164,
            2686346,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
        "_bn": BN {
          "length": 1,
          "negative": 0,
          "red": null,
          "words": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            24200809,
            52762679,
            39805554,
            1157911,
            29958298,
            50898047,
            45850277,
            66191998,
            52770119,
            51260,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(B4wVHPFEBvhsMxsrEYX2cVbTfcfQiLZMh7XbofeDofhd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            33514268,
            38576428,
            28820499,
            60174870,
            15120390,
            46231706,
            61127514,
            28593253,
            9874701,
            2450894,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(55KAtKEGQX8b83HRmALDZsuP1MojBrR438CiWJAaNmfX) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            53092258,
            40116904,
            29327029,
            32040724,
            60620446,
            28201726,
            22219434,
            46404823,
            29778292,
            991847,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            5726246,
            30941938,
            55437424,
            61562626,
            52094472,
            23968365,
            28287650,
            9205732,
            32797589,
            3364566,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(GYZp21Xcp7QsxzFCaBLjmaE6UNV239QvZPEPniCvhDJ6) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            26067647,
            2592511,
            31809026,
            36166292,
            50528115,
            52820729,
            16385857,
            56389297,
            7906859,
            3784026,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(Cgkum2oTs87Vhtu87Y8UznPB5tvNSdBweEGQsxYhzeLN) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            45712415,
            60399628,
            2976120,
            37274815,
            5237713,
            34622005,
            13694300,
            28254569,
            54901438,
            2844662,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(3cWyirr8k5NK1ZX8A4ZUpsg1TpHnf2HXvJyBH6BWodHF) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            29765694,
            21564382,
            61417283,
            55300473,
            34010396,
            55715124,
            804974,
            52882299,
            19793081,
            635942,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(AiurCiekwEz3i8gVapCdRWs9fb4ry45RHCD691AUp5sd) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            6278576,
            3558105,
            44363026,
            31848854,
            35589267,
            60929090,
            26008988,
            50705981,
            5518913,
            2366832,
            0,
          ],
        },
      },
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": PublicKey(AEjwvocgFfu2hpGZpY2qGaEzoCQrGYnf7TGSviEZB9Fn) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            67055849,
            9483813,
            65988286,
            60282799,
            36542326,
            26360063,
            51109538,
            46952379,
            51389409,
            2248594,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(DDN7fpM4tY3ZHdgSuf8B4UBMakh4kqPzuDZHxgVyyNg) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        24200809,
        52762679,
        39805554,
        1157911,
        29958298,
        50898047,
        45850277,
        66191998,
        52770119,
        51260,
        0,
      ],
    },
  },
}
`;
